Broke out openAPI contract with redocly cli (#64)
Cleaned up contract
Added API linting Github action
Updated gradle
